--- a/CRM/views/view-client.ejs
+++ b/CRM/views/view-client.ejs
@@ -593,14 +593,17 @@
                 <input type="name" class="form-control" id="user" name="user" value="<%- user %>" hidden>
                 <div class="table d-none d-md-block">
                   <table class="table table-bordered px-2 py-2 bg-white">
-                    <thead class="thead-dark">
-                      <tr>
-                        <th style="width: 15%" scope="col" class="align-middle">Name</th>
-                        <th class="align-middle"> <%= clientName %> </th>
-                        <th style="width: 5%" scope="col"></th>
-                      </tr>
-                    </thead>
                     <tbody>
+                      <tr>
+                        <th style="width: 15%" scope="col" class="align-middle">Client Name:</th>
+                        <td>
+                          <input type="text" class="form-control" id="newClientName" name="newClientName" value = "<%= result.client[0].clientName %>" required readonly>
+                        </td>
+                        <td style="width: 5%" class="align-middle" style="text-align:center">
+                          <input type="button" id="editClientName" value="edit"></input>
+                          <input type="hidden" id="updateClientName" value="Save"></input>
+                        </td>
+                      </tr>
                       <tr>
                         <th scope="row" class="align-middle">Contacts:</th>
                         <td class="align-middle">
@@ -617,16 +620,7 @@
                         </td>
                         <td></td>
                       </tr>
-                      <tr>
-                        <th scope="row" class="align-middle">Client Name:</th>
-                        <td>
-                          <input type="text" class="form-control" id="newClientName" name="newClientName" value = "<%= result.client[0].clientName %>" required readonly>
-                        </td>
-                        <td class="align-middle" style="text-align:center">
-                          <input type="button" id="editClientName" value="edit"></input>
-                          <input type="hidden" id="updateClientName" value="Save"></input>
-                        </td>
-                      </tr>
+                      
                       <tr>
                         <th scope="row" class="align-middle">Agent Assigment:</th>
                         <td class="align-middle">
