Sample home page dashboard templates

--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -4,7 +4,7 @@
  <!-- Required meta tags -->
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
  <!-- CoreUI CSS -->
  <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/css/coreui.min.css" crossorigin="anonymous">
  <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
@@ -26,10 +26,142 @@
 
       <main class="c-main mx-4 my-0">
         <!-- Main content here -->
-        <h2> HOME PAGE </h2>
+        <h1> WELCOME TO THE CRM HOME PAGE </h1>
         <hr>
-        <h4 class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.</h3>
-      </main>
+        <h5 class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.</h5>
+        <hr>
+
+<!-- Card Portion for Dashboards -->
+
+        <div class="card-deck">
+          <div class="card">
+            <div class="card-header"><strong>Monthly Visit Count - Month of (Insert Month Here) (Insert Year Here)</strong></div>
+            <div class="card-body">
+              <div class="container">
+                <canvas id="monthlyVisitCountDash" height="250"></canvas>
+                <script>
+                      var ctx = document.getElementById("monthlyVisitCountDash");
+                      var monthlyVisitCountDash = new Chart(ctx, {
+                          type: 'horizontalBar',
+                          data: {
+                              labels: ["JV", "FB", "DG", "RPL", "JP", "KJ"],
+                              datasets: [{
+                                  label: 'Visits',
+                                  data: [5, 3, 5, 6, 4, 6],
+                                  backgroundColor: [
+                                    'rgba(255, 99, 132, 0.6)',
+                                    'rgba(54, 162, 235, 0.6)',
+                                    'rgba(255, 206, 86, 0.6)',
+                                    'rgba(75, 192, 192, 0.6)',
+                                    'rgba(255, 159, 64, 0.6)',
+                                    'rgba(255, 99, 132, 0.6)',
+                                  ]
+                              }]
+                          },
+                          options: {
+                              legend: {
+                                display: false,
+                              },
+                              scales: {
+                                xAxes: [{
+                                  ticks: {
+                                    beginAtZero: true,
+                                  }
+                                }]
+                              }
+                            }
+                      });
+                </script>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header"><strong>Most Visited Customers in the Past 30 Days</strong></div>
+            <div class="card-body">
+              <div class="container">
+                <canvas id="mostVisitedDash" height="250"></canvas>
+                <script>
+                      var ctx = document.getElementById("mostVisitedDash");
+                      var mostVisitedDash = new Chart(ctx, {
+                          type: 'bar',
+                          data: {
+                              labels: ["Customer A", "Customer B", "Customer C", "Customer D", "Customer E", "Customer F"],
+                              datasets: [{
+                                  label: 'Visits',
+                                  data: [10, 8, 8, 7, 5, 2],
+                                  backgroundColor: [
+                                    'rgba(255, 99, 132, 0.6)',
+                                    'rgba(54, 162, 235, 0.6)',
+                                    'rgba(255, 206, 86, 0.6)',
+                                    'rgba(75, 192, 192, 0.6)',
+                                    'rgba(255, 159, 64, 0.6)',
+                                    'rgba(255, 99, 132, 0.6)',
+                                  ]
+                              }]
+                          },
+                          options: {
+                              legend: {
+                                display: false,
+                              },
+                              scales: {
+                                yAxes: [{
+                                  ticks: {
+                                    beginAtZero: true,
+                                  }
+                                }]
+                              }
+                            }
+                      });
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="card-deck">
+          <div class="card">
+            <div class="card-header"><strong>Clients Due for Visit</strong></div>
+            <div class="card-body">
+              <div class="table-responsive">
+                  <table class="table table-sm table-borderless table-striped px-2 py-2">
+                    <thead>
+                      <tr>
+                        <th scope="col" class="align-middle">Client</th>
+                        <th scope="col" class="align-middle">Last Visit</th>
+                        <th scope="col" class="align-middle">Days since Last Visit</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Company X</td>
+                        <td>1/1/2020</td>
+                        <td>14</td>
+                      </tr>
+                      <tr>
+                        <td>Company Y</td>
+                        <td>1/5/2020</td>
+                        <td>12</td>
+                      </tr>
+                      <tr>
+                        <td>Company Z</td>
+                        <td>1/14/2020</td>
+                        <td>8</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">Dashboard 4</div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
@@ -41,5 +173,7 @@
  <!-- Popper.js first, then CoreUI JS -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-L2pyEeut/H3mtgCBaUNw7KWzp5n9&#43;4pDQiExs933/5QfaTh8YStYFFkOzSoXjlTb" crossorigin="anonymous"></script>
  <script src="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/js/coreui.min.js"></script>
+
+ <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
  </body>
 </html>
