--- a/CRM/views/review-client-upload.ejs
+++ b/CRM/views/review-client-upload.ejs
@@ -62,10 +62,14 @@
                      for (i = 0; i < clients.length; i++) {
                        list += '<tr>';
                        list += '<th> <select class="form-control" id="agentAbbrev[' + i + ']" name="agentAbbrev[' + i + ']" required>';
-                         list += '<option value="" disabled selected>Select</option>';
-
+                       list += '<option value="" disabled selected>Select</option>';
                        for (k = 0; k < agentList.length; k++) {
+                        // Select Agent based on default value
+                        if (defaultAgent == agentList[k].agentAbbrev) {
+                         list += '<option selected>' + agentList[k].agentAbbrev + '</option>';
+                        } else {
                          list += '<option>' + agentList[k].agentAbbrev + '</option>';
+                        }
                        }
                        list += '</select> </th>';
                        list += '<td style="vertical-align: middle">' + clients[i].clientName + '</td>';
@@ -73,33 +77,84 @@
                        list += '<td style="vertical-align: middle">' + clients[i].clientFax + '</td>';
                        list += '<td style="vertical-align: middle">' + clients[i].clientAddress1 + '</td>';
                        list += '<td style="vertical-align: middle"><select class="form-control" id="clientAddress1Type[' + i + ']" name="clientAddress1Type[' + i + ']" required>';
+                       // Select default value
+                       if (defaultAddress1Type == 'Contact Address'){
+                         list += '<option selected>Contact Address</option>';
+                         list += '<option>Delivery Address</option>';
+                       } else if (defaultAddress1Type == 'Delivery Address'){
+                         list += '<option>Contact Address</option>';
+                         list += '<option selected>Delivery Address</option>';
+                       } else {
                          list += '<option value="" disabled selected>Select</option>';
                          list += '<option>Contact Address</option>';
                          list += '<option>Delivery Address</option>';
+                       }
                        list += '</select> </td>';
                        list += '<td style="vertical-align: middle">' + clients[i].clientAddress2 + '</td>';
                        list += '<td style="vertical-align: middle"><select class="form-control" id="clientAddress2Type[' + i + ']" name="clientAddress2Type[' + i + ']">';
-                         list += '<option value=""></option>';
+                       // Select default value
+                       if (defaultAddress2Type == 'Contact Address'){
+                         list += '<option selected>Contact Address</option>';
+                         list += '<option>Delivery Address</option>';
+                       } else if (defaultAddress2Type == 'Delivery Address'){
+                         list += '<option>Contact Address</option>';
+                         list += '<option selected>Delivery Address</option>';
+                       } else {
+                         list += '<option value="" disabled selected>Select</option>';
                          list += '<option>Contact Address</option>';
                          list += '<option>Delivery Address</option>';
+                       }
                        list += '</select> </td>';
                        list += '<td style="vertical-align: middle">' + clients[i].clientAddress3 + '</td>';
                        list += '<td style="vertical-align: middle"><select class="form-control" id="clientAddress3Type[' + i + ']" name="clientAddress3Type[' + i + ']">';
-                         list += '<option value=""></option>';
+                       // Select default value
+                       if (defaultAddress3Type == 'Contact Address'){
+                         list += '<option selected>Contact Address</option>';
+                         list += '<option>Delivery Address</option>';
+                       } else if (defaultAddress3Type == 'Delivery Address'){
+                         list += '<option>Contact Address</option>';
+                         list += '<option selected>Delivery Address</option>';
+                       } else {
+                         list += '<option value="" disabled selected>Select</option>';
                          list += '<option>Contact Address</option>';
                          list += '<option>Delivery Address</option>';
+                       }
                        list += '</select> </td>';
                        list += '<td style="vertical-align: middle">' + clients[i].clientAddress4 + '</td>';
                        list += '<td style="vertical-align: middle"><select class="form-control" id="clientAddress4Type[' + i + ']" name="clientAddress4Type[' + i + ']">';
-                         list += '<option value=""></option>';
+                       // Select default value
+                       if (defaultAddress4Type == 'Contact Address'){
+                         list += '<option selected>Contact Address</option>';
+                         list += '<option>Delivery Address</option>';
+                       } else if (defaultAddress4Type == 'Delivery Address'){
+                         list += '<option>Contact Address</option>';
+                         list += '<option selected>Delivery Address</option>';
+                       } else {
+                         list += '<option value="" disabled selected>Select</option>';
                          list += '<option>Contact Address</option>';
                          list += '<option>Delivery Address</option>';
+                       }
                        list += '</select> </td>';
                        list += '<td style="vertical-align: middle">' + clients[i].clientEmail1 + '</td>';
                        list += '<td style="vertical-align: middle">' + clients[i].clientEmail2 + '</td>';
-                       list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdOX[' + i + ']" value="true"/></div></td>';
-                       list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdPP[' + i + ']" value="true"/></div></td>';
-                       list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdTP[' + i + ']" value="true"/></div></td>';
+                       //Select Default Values
+                       if (defaultProdOX == 'true') {
+                        list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdOX[' + i + ']" value="true" checked/></div></td>';
+                       } else {
+                        list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdOX[' + i + ']" value="true"/></div></td>';
+                       }
+                       //Select Default Values
+                       if (defaultProdPP == 'true') {
+                        list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdPP[' + i + ']" value="true" checked/></div></td>';
+                       } else {
+                        list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdPP[' + i + ']" value="true"/></div></td>';
+                       }
+                       //Select Default Values
+                       if (defaultProdTP == 'true') {
+                        list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdTP[' + i + ']" value="true" checked/></div></td>';
+                       } else {
+                        list += '<td style="text-align:center; vertical-align: middle"><div class="custom-control custom-checkbox"><input class="form-check-input" type="checkbox" name="clientProdTP[' + i + ']" value="true"/></div></td>';
+                       }
                        list += '<td style="vertical-align: middle">' + clients[i].clientNotes + '</td>';
                        list += '<td style="vertical-align: middle">Enabled</td>';
                        list += '</tr>'
