Various Mobile UI changes

--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -143,7 +143,12 @@
           	</div>
           </div>
 
-          <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+          <div class="row">
+            <div class="col-12 col-md-auto">
+              <button type="submit" class="btn-block btn-primary btn-lg">Submit</button>
+            </div>
+          </div>
+
           </form>
         </main>
       </main>
