--- a/CRM/views/entry-contact.ejs
+++ b/CRM/views/entry-contact.ejs
@@ -92,9 +92,12 @@
           			<textarea class="form-control" name="contactNotes" rows="3" placeholder="Remarks"></textarea>
           		</div>
           	</div>
+            <div class="row">
+              <div class="col-12 col-md-auto">
+                <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+              </div>
+            </div>
 
-
-          <input class="btn btn-primary" type="submit" value="Submit">
           </form>
 
         </main>
