--- a/CRM/views/entry-event.ejs
+++ b/CRM/views/entry-event.ejs
@@ -128,7 +128,7 @@
             <label for="eventBranch">Branch Location (If Applicable)</label>
             <div class="form-row">
           		<div class="form-group col-12 col-md-auto">
-          		  <input type="text" class="form-control" id="eventBranch" name="eventBranch" placeholder="Location" required>
+          		  <input type="text" class="form-control" id="eventBranch" name="eventBranch" placeholder="Location">
           		</div>
             </div>
 
@@ -140,7 +140,11 @@
           		</div>
           	</div>
 
-          <input class="btn btn-primary" type="submit" value="Submit">
+            <div class="row">
+              <div class="col-12 col-md-auto">
+                <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+              </div>
+            </div>
           </form>
         </main>
       </main>
