--- a/CRM/views/view-client.ejs
+++ b/CRM/views/view-client.ejs
@@ -620,7 +620,7 @@
                         </td>
                         <td></td>
                       </tr>
-                      
+
                       <tr>
                         <th scope="row" class="align-middle">Agent Assigment:</th>
                         <td class="align-middle">
@@ -896,10 +896,10 @@
                       </tr>
                     </tbody>
                   </table>
-                </div>
-                <button type="submit" class="btn btn-primary btn-lg" id="submit" name="submit">Submit</button>
-              <input style="visibility: hidden" id="isEditing" name ="isEditing" value="false">
-            </form>
+                  <button type="submit" class="btn btn-primary btn-lg" id="submit" name="submit">Submit</button>
+                  <input style="visibility: hidden" id="isEditing" name ="isEditing" value="false">
+                  </div>
+                </form>
 
 
                 <!-- Mobile View of Data -->
@@ -1242,8 +1242,14 @@
                                 </tr>
                               </tbody>
                             </table>
-                            <button type="submit" class="btn btn-primary btn-lg" id="submit" name="submit">Submit</button>
-                            <input style="visibility: hidden" id="isEditing" name ="isEditing" value="false">
+
+                            <div class="row">
+                              <div class="col-12 col-md-auto">
+                                <button type="submit" class="btn-block btn-primary btn-lg" id="submit" name="submit">Submit</button>
+                                <input style="visibility: hidden" id="isEditing" name ="isEditing" value="false">
+                              </div>
+                            </div>
+
                           </form>
                         </div>
 
