--- a/CRM/views/entry-user.ejs
+++ b/CRM/views/entry-user.ejs
@@ -98,8 +98,11 @@
           			  <input type="text" class="form-control" id="agentPhone" name="agentPhone" placeholder="Contact Number">
           			</div>
           	</div>
-
-          <input class="btn btn-primary" type="submit" value="Submit">
+            <div class="row">
+              <div class="col-12 col-md-auto">
+                <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+              </div>
+            </div>
           </form>
         </main>
       </main>
