--- a/CRM/views/search-client.ejs
+++ b/CRM/views/search-client.ejs
@@ -48,7 +48,11 @@
     <!-- Submit Button to execute -->
                   <div class="form-row">
                     <div class="form-group col">
-                    <input class="btn btn-primary" type="submit" value="Submit">
+                    <div class="row">
+                      <div class="col-12 col-md-auto">
+                        <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+                      </div>
+                    </div>
                       </form>
                     </div>
                   </div>
